# hpc

./: .gitignore  COMPLEXITY  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: args.rs  client.rs  filters.rs  format.rs  interactive.rs  lib.rs  main.rs  mfa.rs  sbatch.rs  stream.rs
hpcd/: Cargo.toml
hpcd/src/: config.rs  main.rs
hpcd/src/agent/: add_cluster.rs  helpers.rs  managers.rs  mod.rs  os.rs  rpc.rs  service.rs  sessions.rs  slurm.rs  submit.rs  types.rs
hpcd/src/ssh/: mod.rs  session.rs  sync_plan.rs
hpcd/src/ssh/session/: auth.rs  sftp.rs  tests.rs
hpcd/src/state/: db.rs
hpcd/src/util/: mod.rs  net.rs  remote_path.rs
proto/: Cargo.toml  build.rs
proto/protos/: agent.proto
proto/src/: lib.rs
scripts/: check_spdx_headers.sh  release.sh
tests/: README.md  run_e2e.py
tests/05_queued_state/: README.md  run.sh
tests/91_queued_state/: README.md  submit.sbatch
tests/92_long_running_hashes/: README.md  prepare.sh  run.sh  submit.sbatch
