[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
proto = { path = "../proto" }
clap = { version = "4.5.46", features = ["derive"] }
anyhow = "1.0.99"
tokio-stream = "0.1.17"
log = "0.4.27"
shellexpand = { version = "3.1.1", features = ["full"] }


[[bin]]
name = "hpc"
path = "src/main.rs"
